# rust-finance

./: .env  .env.example  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml
migrations/: 20231010185444_users.up.sql  20240213124531_categories.up.sql  20240213124625_payments.up.sql
protos/: category.proto
src/: jwt_auth.rs  main.rs
src/amqp/: config.rs  mod.rs  payment.rs  schema.rs
src/category/: handler.rs  mod.rs  model.rs  schema.rs
src/grpc/category/: client.rs  server.rs
src/payments/: handler.rs  model.rs  schema.rs
src/user/: handler.rs  model.rs  schema.rs
